# parkme

./: README.md  docker-compose.yml
backend/: .dockerignore  .gitignore  .pre-commit-config.yaml  API_GUIDE.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  TODO.MD  entrypoint.migrate.sh  pyproject.toml
backend/accounts/: admin.py  apps.py  models.py  permissions.py  serializers.py  services.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/app/: celery.py  urls.py
backend/app/settings/: base.py  prod.py
backend/bookings/: admin.py  models.py  serializers.py  services.py  views.py
backend/bookings/migrations/: 0001_initial.py  0002_initial.py
backend/enforcement/: admin.py  apps.py  models.py
backend/enforcement/migrations/: 0001_initial.py
backend/parking/: admin.py  apps.py  models.py  serializers.py  signals.py  views.py
backend/parking/management/commands/: seed_parking.py
backend/parking/migrations/: 0001_initial.py
backend/payments/: admin.py  models.py
backend/payments/migrations/: 0001_initial.py
backend/pricing/: admin.py  models.py  serializers.py  services.py  views.py
backend/pricing/migrations/: 0001_initial.py
backend/vehicles/: admin.py  models.py  serializers.py  views.py
backend/vehicles/migrations/: 0001_initial.py
frontend/: .env.development  Dockerfile  index.html  orval.config.ts  package.json  pnpm-lock.yaml
frontend/src/: main.tsx  router.tsx
frontend/src/api/: http-client.ts
frontend/src/lib/: auth-context.tsx  auth.ts
(+12 files in other folders)
